# tetcd

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml  settings.toml
.claude/skills/python-testing/: SKILL.md
.claude/skills/technical-writer/: SKILL.md
.devcontainer/: compose.yml  devcontainer.json
.github/workflows/: publish.yml  test.yml
src/tetcd/: __init__.py  config.py  main.py
src/tetcd/etcd/: __init__.py  client.py  v2.py  v3.py
src/tetcd/tui/: __init__.py  app.py
src/tetcd/tui/screens/: browser.py  editor.py  splash.py
src/tetcd/tui/widgets/: key_tree.py  key_value.py
tests/: __init__.py  conftest.py  fakes.py  test_browser.py  test_client.py  test_config.py  test_editor.py  test_fakes.py  test_main.py  test_snapshots.py  test_tui.py  test_v2_client.py  test_v3_client.py  test_widgets.py
tests/__snapshots__/test_snapshots/: test_add_dir_modal_snapshot.raw  test_add_key_modal_snapshot.raw  test_browser_inline_editor_dirty_snapshot.raw  test_browser_inline_editor_snapshot.raw  test_browser_screen_snapshot.raw  test_confirm_modal_snapshot.raw  test_discard_changes_confirm_snapshot.raw  test_edit_key_modal_snapshot.raw  test_modal_over_browser_shows_screen_behind_snapshot.raw  test_overwrite_paste_confirm_snapshot.raw  test_splash_screen_snapshot.raw
